--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,6 +3,10 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -17,8 +21,49 @@ img {
   max-width: 100%;
 }
 
+input {
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #4a6479;
+  background-color: #fff;
+  background-clip: padding-box;
+  border-left: 1px solid #bdbdbd;
+  border-top: 1px solid #bdbdbd;
+  border-right: 1px solid #bdbdbd;
+  border-bottom: 1px solid #bdbdbd;
+
+  border-radius: 2px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+button {
+  margin-left: 15px;
+  font-weight: 400;
+  line-height: 1.5;
+
+  cursor: pointer;
+
+  background-color: #eee;
+  border: 1px solid #bdbdbd;
+  padding: 0.375rem 1.75rem;
+
+  font-family: inherit;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+}
+
+.input-group {
+  display: flex;
+  margin-top: 50px;
+}
+
 .timer {
   display: flex;
+  margin-top: 10px;
 }
 
 .field {
