--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,10 +3,6 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -54,6 +50,12 @@ button {
   font-family: inherit;
   font-size: 1rem;
   border-radius: 0.25rem;
+}
+
+.body-timer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .input-group {
