--- a/src/css/common.css
+++ b/src/css/common.css
@@ -103,3 +103,19 @@ button {
   font-size: 45px;
   color: #4a6479;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+
+  width: 320px;
+}
+
+.form__label:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.form__btn {
+  width: 207px;
+}
